@@ -44,8 +44,8 @@ import java.util.zip.ZipFile;
 /**
  * Provides access to {@code test-data} directories associated with JUnit tests.
  *
- * <p>We have chosen "{@code test-data}" to follow the javadoc "{@code doc-files}" convention of
- * ensuring that data directories don't look anything like normal java packages.
+ * <p>We have chosen "{@code test-data}" to follow the javadoc "{@code doc-files}" convention of ensuring that data
+ * directories don't look anything like normal java packages.
  *
  * <p>Example:
  *
@@ -69,9 +69,9 @@ import java.util.zip.ZipFile;
  *   <li>{@code test-data/script.xml}
  * </ul>
  *
- * <p>By convention you should try and locate {@code test-data} near the JUnit test cases that uses
- * it. If you need an access to shared test data, import the {@link org.geotools.TestData} class
- * from the {@code sample-module} instead of this one.
+ * <p>By convention you should try and locate {@code test-data} near the JUnit test cases that uses it. If you need an
+ * access to shared test data, import the {@link org.geotools.TestData} class from the {@code sample-module} instead of
+ * this one.
  *
  * @since 2.4
  * @author James McGill
@@ -87,28 +87,27 @@ public class TestData implements Runnable {
     private static final String ENCODING = "UTF-8";
 
     /**
-     * The {@linkplain System#getProperty(String) system property} key for more extensive test
-     * suite. The value for this key is returned by the {@link #isExtensiveTest} method. Some test
-     * suites will perform more extensive test coverage if this property is set to {@code true}. The
-     * value for this property is typically defined on the command line as a <code>-D{@value}=true
+     * The {@linkplain System#getProperty(String) system property} key for more extensive test suite. The value for this
+     * key is returned by the {@link #isExtensiveTest} method. Some test suites will perform more extensive test
+     * coverage if this property is set to {@code true}. The value for this property is typically defined on the command
+     * line as a <code>-D{@value}=true
      * </code> option at Java or Maven starting time.
      */
     public static final String EXTENSIVE_TEST_KEY = "org.geotools.test.extensive";
 
     /**
-     * The {@linkplain System#getProperty(String) system property} key for interactive tests. The
-     * value for this key is returned by the {@link #isInteractiveTest} method. Some test suites
-     * will show windows with maps and other artifacts related to testing if this property is set to
-     * {@code true}. The value for this property is typically defined on the command line as a
-     * <code>-D{@value}=true</code> option at Java or Maven starting time.
+     * The {@linkplain System#getProperty(String) system property} key for interactive tests. The value for this key is
+     * returned by the {@link #isInteractiveTest} method. Some test suites will show windows with maps and other
+     * artifacts related to testing if this property is set to {@code true}. The value for this property is typically
+     * defined on the command line as a <code>-D{@value}=true</code> option at Java or Maven starting time.
      */
     public static final String INTERACTIVE_TEST_KEY = "org.geotools.test.interactive";
 
     /**
-     * The files to delete at shutdown time. {@link File#deleteOnExit} alone doesn't seem suffisient
-     * since it will preserve any overwritten files.
+     * The files to delete at shutdown time. {@link File#deleteOnExit} alone doesn't seem suffisient since it will
+     * preserve any overwritten files.
      */
-    private static final LinkedList<Deletable> toDelete = new LinkedList<Deletable>();
+    private static final LinkedList<Deletable> toDelete = new LinkedList<>();
 
     /** {@code true} if JAI media lib is available. */
     private static final boolean mediaLibAvailable;
@@ -116,13 +115,12 @@ public class TestData implements Runnable {
     static {
 
         // do we wrappers at hand?
-        boolean mediaLib = false;
         Class mediaLibImage = null;
         try {
             mediaLibImage = Class.forName("com.sun.medialib.mlib.Image");
         } catch (ClassNotFoundException e) {
         }
-        mediaLib = (mediaLibImage != null);
+        boolean mediaLib = (mediaLibImage != null);
 
         // npw check if we either wanted to disable explicitly and if we installed the native libs
         if (mediaLib) {
@@ -134,29 +132,22 @@ public class TestData implements Runnable {
                 // native libs installed
                 if (mediaLib) {
                     final Class mImage = mediaLibImage;
-                    mediaLib =
-                            AccessController.doPrivileged(
-                                    new PrivilegedAction<Boolean>() {
-                                        public Boolean run() {
-                                            try {
-                                                // get the method
-                                                final Class params[] = {};
-                                                Method method =
-                                                        mImage.getDeclaredMethod(
-                                                                "isAvailable", params);
+                    PrivilegedAction<Boolean> action = () -> {
+                        try {
+                            // get the method
+                            final Class[] params = {};
+                            Method method = mImage.getDeclaredMethod("isAvailable", params);
 
-                                                // invoke
-                                                final Object paramsObj[] = {};
+                            // invoke
+                            final Object[] paramsObj = {};
 
-                                                final Object o =
-                                                        mImage.getDeclaredConstructor()
-                                                                .newInstance();
-                                                return (Boolean) method.invoke(o, paramsObj);
-                                            } catch (Throwable e) {
-                                                return false;
-                                            }
-                                        }
-                                    });
+                            final Object o = mImage.getDeclaredConstructor().newInstance();
+                            return (Boolean) method.invoke(o, paramsObj);
+                        } catch (Throwable e) {
+                            return false;
+                        }
+                    };
+                    mediaLib = AccessController.doPrivileged(action);
                 }
             } catch (Throwable e) {
                 // Because the property com.sun.media.jai.disableMediaLib isn't
@@ -177,8 +168,8 @@ public class TestData implements Runnable {
     }
 
     /**
-     * Register the thread to be automatically executed at shutdown time. This thread will delete
-     * all temporary files registered in {@link #toDelete}.
+     * Register the thread to be automatically executed at shutdown time. This thread will delete all temporary files
+     * registered in {@link #toDelete}.
      */
     static {
         Runtime.getRuntime().addShutdownHook(new Thread(new TestData(), "Test data cleaner"));
@@ -188,8 +179,8 @@ public class TestData implements Runnable {
     protected TestData() {}
 
     /**
-     * Get a property as a boolean value. If the property can't be fetch for security reason, then
-     * default to {@code false}.
+     * Get a property as a boolean value. If the property can't be fetch for security reason, then default to
+     * {@code false}.
      */
     private static boolean getBoolean(final String name) {
         try {
@@ -204,12 +195,11 @@ public class TestData implements Runnable {
     }
 
     /**
-     * Returns {@code true} if the running Java virtual machine is 1.5. This is the lowest Java
-     * version currently supported by Geotools. This version will increase in future Geotools
-     * version.
+     * Returns {@code true} if the running Java virtual machine is 1.5. This is the lowest Java version currently
+     * supported by Geotools. This version will increase in future Geotools version.
      *
-     * <p>This method was used for some broken JUnit tests that were know to run on JSE 1.4 but not
-     * on JSE 1.6 for example.
+     * <p>This method was used for some broken JUnit tests that were know to run on JSE 1.4 but not on JSE 1.6 for
+     * example.
      *
      * @return {@code true} if we are running on the target Java platform.
      */
@@ -220,8 +210,7 @@ public class TestData implements Runnable {
     /**
      * Returns {@code true} if JAI MediaLib acceleration is available.
      *
-     * <p>This method is used to disable some checks in unit tests that fail when JAI is run in pure
-     * java mode.
+     * <p>This method is used to disable some checks in unit tests that fail when JAI is run in pure java mode.
      *
      * @return {@code true} if JAI medialib are available.
      */
@@ -230,8 +219,8 @@ public class TestData implements Runnable {
     }
 
     /**
-     * Returns {@code true} if {@value #EXTENSIVE_TEST_KEY} system property is set to {@code true}.
-     * Test suites should check this value before to perform lengthly tests.
+     * Returns {@code true} if {@value #EXTENSIVE_TEST_KEY} system property is set to {@code true}. Test suites should
+     * check this value before to perform lengthly tests.
      *
      * @return {@code true} if extensive tests are enabled.
      */
@@ -240,9 +229,8 @@ public class TestData implements Runnable {
     }
 
     /**
-     * Returns {@code true} if {@value #INTERACTIVE_TEST_KEY} system property is set to {@code
-     * true}. Test suites should check this value before showing any kind of graphical window to the
-     * user.
+     * Returns {@code true} if {@value #INTERACTIVE_TEST_KEY} system property is set to {@code true}. Test suites should
+     * check this value before showing any kind of graphical window to the user.
      *
      * @return {@code true} if interactive tests are enabled.
      */
@@ -274,10 +262,9 @@ public class TestData implements Runnable {
     }
 
     /**
-     * Access to <code>{@linkplain #getResource getResource}(caller, path)</code> as a non-null
-     * {@link URL}. At the difference of {@code getResource}, this method throws an exception if the
-     * resource is not found. This provides a more explicit explanation about the failure reason
-     * than the infamous {@link NullPointerException}.
+     * Access to <code>{@linkplain #getResource getResource}(caller, path)</code> as a non-null {@link URL}. At the
+     * difference of {@code getResource}, this method throws an exception if the resource is not found. This provides a
+     * more explicit explanation about the failure reason than the infamous {@link NullPointerException}.
      *
      * @param caller Calling class or object used to locate {@code test-data}.
      * @param path Path to file in {@code test-data}.
@@ -294,8 +281,8 @@ public class TestData implements Runnable {
     }
 
     /**
-     * Access to <code>{@linkplain #getResource getResource}(caller, path)</code> as a non-null
-     * {@link File}. You can access the {@code test-data} directory with:
+     * Access to <code>{@linkplain #getResource getResource}(caller, path)</code> as a non-null {@link File}. You can
+     * access the {@code test-data} directory with:
      *
      * <blockquote>
      *
@@ -311,8 +298,7 @@ public class TestData implements Runnable {
      * @throws FileNotFoundException if the file is not found.
      * @throws IOException if the resource can't be fetched for an other reason.
      */
-    public static File file(final Object caller, final String path)
-            throws FileNotFoundException, IOException {
+    public static File file(final Object caller, final String path) throws FileNotFoundException, IOException {
         final URL url = url(caller, path);
         final File file = new File(URLDecoder.decode(url.getPath(), ENCODING));
         if (!file.exists()) {
@@ -322,8 +308,8 @@ public class TestData implements Runnable {
     }
 
     /**
-     * Creates a temporary file with the given name. The file will be created in the {@code
-     * test-data} directory and will be deleted on exit.
+     * Creates a temporary file with the given name. The file will be created in the {@code test-data} directory and
+     * will be deleted on exit.
      *
      * @param caller Calling class or object used to locate {@code test-data}.
      * @param name A base name for the temporary file.
@@ -341,8 +327,8 @@ public class TestData implements Runnable {
     }
 
     /**
-     * Provides a non-null {@link InputStream} for named test data. It is the caller responsability
-     * to close this stream after usage.
+     * Provides a non-null {@link InputStream} for named test data. It is the caller responsability to close this stream
+     * after usage.
      *
      * @param caller Calling class or object used to locate {@code test-data}.
      * @param name of test data to load.
@@ -358,8 +344,8 @@ public class TestData implements Runnable {
 
     /**
      * Provides a {@link BufferedReader} for named test data. The buffered reader is provided as an
-     * {@link LineNumberReader} instance, which is useful for displaying line numbers where error
-     * occur. It is the caller responsability to close this reader after usage.
+     * {@link LineNumberReader} instance, which is useful for displaying line numbers where error occur. It is the
+     * caller responsability to close this reader after usage.
      *
      * @param caller The class of the object associated with named data.
      * @param name of test data to load.
@@ -374,8 +360,7 @@ public class TestData implements Runnable {
     }
 
     /**
-     * Provides a channel for named test data. It is the caller responsability to close this chanel
-     * after usage.
+     * Provides a channel for named test data. It is the caller responsability to close this chanel after usage.
      *
      * @param caller The class of the object associated with named data.
      * @param name of test data to load.
@@ -395,17 +380,16 @@ public class TestData implements Runnable {
     }
 
     /**
-     * Unzip a file in the {@code test-data} directory. The zip file content is inflated in place,
-     * i.e. inflated files are written in the same {@code test-data} directory. If a file to be
-     * inflated already exists in the {@code test-data} directory, then the existing file is left
-     * untouched and the corresponding ZIP entry is silently skipped. This approach avoid the
-     * overhead of inflating the same files many time if this {@code unzipFile} method is invoked
-     * before every tests.
+     * Unzip a file in the {@code test-data} directory. The zip file content is inflated in place, i.e. inflated files
+     * are written in the same {@code test-data} directory. If a file to be inflated already exists in the
+     * {@code test-data} directory, then the existing file is left untouched and the corresponding ZIP entry is silently
+     * skipped. This approach avoid the overhead of inflating the same files many time if this {@code unzipFile} method
+     * is invoked before every tests.
      *
-     * <p>Inflated files will be automatically {@linkplain File#deleteOnExit deleted on exit} if and
-     * only if they have been modified. Callers don't need to worry about cleanup, because the files
-     * are inflated in the {@code target/.../test-data} directory, which is not versionned by SVN
-     * and is cleaned by Maven on {@code mvn clean} execution.
+     * <p>Inflated files will be automatically {@linkplain File#deleteOnExit deleted on exit} if and only if they have
+     * been modified. Callers don't need to worry about cleanup, because the files are inflated in the
+     * {@code target/.../test-data} directory, which is not versionned by SVN and is cleaned by Maven on {@code mvn
+     * clean} execution.
      *
      * @param caller The class of the object associated with named data.
      * @param name The file name to unzip in place.
@@ -413,46 +397,49 @@ public class TestData implements Runnable {
      * @throws IOException if an error occurs during an input or output operation.
      * @since 2.2
      */
-    public static void unzipFile(final Object caller, final String name)
-            throws FileNotFoundException, IOException {
+    public static void unzipFile(final Object caller, final String name) throws FileNotFoundException, IOException {
         final File file = file(caller, name);
         final File parent = file.getParentFile().getAbsoluteFile();
-        final ZipFile zipFile = new ZipFile(file);
-        final Enumeration entries = zipFile.entries();
-        final byte[] buffer = new byte[4096];
-        while (entries.hasMoreElements()) {
-            final ZipEntry entry = (ZipEntry) entries.nextElement();
-            if (entry.isDirectory()) {
-                continue;
+        unzip(file, parent);
+    }
+
+    /** Unzips the give source file in the target directory */
+    public static void unzip(File file, File target) throws IOException {
+        try (final ZipFile zipFile = new ZipFile(file)) {
+            final Enumeration entries = zipFile.entries();
+            final byte[] buffer = new byte[4096];
+            while (entries.hasMoreElements()) {
+                final ZipEntry entry = (ZipEntry) entries.nextElement();
+                if (entry.isDirectory()) {
+                    continue;
+                }
+                final File path = new File(target, entry.getName());
+                if (path.exists()) {
+                    continue;
+                }
+                final File directory = path.getParentFile();
+                if (directory != null && !directory.exists()) {
+                    directory.mkdirs();
+                }
+                // Copy the file. Note: no need for a BufferedOutputStream,
+                // since we are already using a buffer of type byte[4096].
+                try (InputStream in = zipFile.getInputStream(entry);
+                        OutputStream out = new FileOutputStream(path)) {
+                    int len;
+                    while ((len = in.read(buffer)) >= 0) {
+                        out.write(buffer, 0, len);
+                    }
+                }
+                // Call 'deleteOnExit' only after after we closed the file,
+                // because this method will save the modification time.
+                deleteOnExit(path, false);
             }
-            final File path = new File(parent, entry.getName());
-            if (path.exists()) {
-                continue;
-            }
-            final File directory = path.getParentFile();
-            if (directory != null && !directory.exists()) {
-                directory.mkdirs();
-            }
-            // Copy the file. Note: no need for a BufferedOutputStream,
-            // since we are already using a buffer of type byte[4096].
-            final InputStream in = zipFile.getInputStream(entry);
-            final OutputStream out = new FileOutputStream(path);
-            int len;
-            while ((len = in.read(buffer)) >= 0) {
-                out.write(buffer, 0, len);
-            }
-            out.close();
-            in.close();
-            // Call 'deleteOnExit' only after after we closed the file,
-            // because this method will save the modification time.
-            deleteOnExit(path, false);
         }
-        zipFile.close();
     }
 
     /**
-     * Requests that the file or directory denoted by the specified pathname be deleted when the
-     * virtual machine terminates.
+     * Requests that the file or directory denoted by the specified pathname be deleted when the virtual machine
+     * terminates.
      *
      * @param file The file to delete on exit.
      */
@@ -461,13 +448,13 @@ public class TestData implements Runnable {
     }
 
     /**
-     * Requests that the file or directory denoted by the specified pathname be deleted when the
-     * virtual machine terminates. This method can optionnaly delete the file only if it has been
-     * modified, thus giving a chance for test suites to copy their resources only once.
+     * Requests that the file or directory denoted by the specified pathname be deleted when the virtual machine
+     * terminates. This method can optionnaly delete the file only if it has been modified, thus giving a chance for
+     * test suites to copy their resources only once.
      *
      * @param file The file to delete.
-     * @param force If {@code true}, delete the file in all cases. If {@code false}, delete the file
-     *     if and only if it has been modified. The default value if {@code true}.
+     * @param force If {@code true}, delete the file in all cases. If {@code false}, delete the file if and only if it
+     *     has been modified. The default value if {@code true}.
      * @since 2.4
      */
     protected static void deleteOnExit(final File file, final boolean force) {
@@ -504,8 +491,8 @@ public class TestData implements Runnable {
         }
 
         /**
-         * Deletes this file, if modified. Returns {@code false} only if the file should be deleted
-         * but the operation failed.
+         * Deletes this file, if modified. Returns {@code false} only if the file should be deleted but the operation
+         * failed.
          */
         public boolean delete() {
             if (!file.exists() || file.lastModified() <= timestamp) {
@@ -522,9 +509,10 @@ public class TestData implements Runnable {
     }
 
     /**
-     * Deletes all temporary files. This method is invoked automatically at shutdown time and should
-     * not be invoked directly. It is public only as an implementation side effect.
+     * Deletes all temporary files. This method is invoked automatically at shutdown time and should not be invoked
+     * directly. It is public only as an implementation side effect.
      */
+    @Override
     @SuppressWarnings("PMD.SystemPrintln")
     public void run() {
         int iteration = 5; // Maximum number of iterations
