@@ -21,15 +21,25 @@ import java.net.MalformedURLException;
 import java.net.URL;
 import java.net.URLDecoder;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.Map;
-import org.apache.commons.collections.map.CaseInsensitiveMap;
+import org.apache.commons.collections4.map.CaseInsensitiveMap;
 
 public class URIs {
 
     public static URL buildURL(URL baseURL, Map<String, String> kvp) {
-        String uri = buildURL(baseURL.toExternalForm(), null, kvp);
+        String uri = buildURL(baseURL.toExternalForm(), null, kvp, "UTF-8");
+        try {
+            return new URL(uri);
+        } catch (MalformedURLException e) {
+            throw new RuntimeException(e);
+        }
+    }
+
+    public static URL buildURL(URL baseURL, Map<String, String> kvp, String encoding) {
+        String uri = buildURL(baseURL.toExternalForm(), null, kvp, encoding);
         try {
             return new URL(uri);
         } catch (MalformedURLException e) {
@@ -38,15 +48,15 @@ public class URIs {
     }
 
     public static String buildURL(String baseURL, Map<String, String> kvp) {
-        return buildURL(baseURL, null, kvp);
+        return buildURL(baseURL, null, kvp, "UTF-8");
     }
 
-    public static String buildURL(final String baseURL, String path, Map<String, String> kvp) {
+    public static String buildURL(final String baseURL, String path, Map<String, String> kvp, String encoding) {
 
         // prepare modifiable parameters
         StringBuilder baseURLBuffer = new StringBuilder(baseURL);
 
-        Map<String, String> kvpBuffer = new LinkedHashMap<String, String>();
+        Map<String, String> kvpBuffer = new LinkedHashMap<>();
         if (kvp != null) {
             kvpBuffer.putAll(kvp);
         }
@@ -65,7 +75,7 @@ public class URIs {
             params.append("=");
             String value = entry.getValue();
             if (value != null) {
-                String encoded = urlEncode(value);
+                String encoded = urlEncode(value, encoding);
                 params.append(encoded);
             }
             params.append("&");
@@ -97,16 +107,12 @@ public class URIs {
         return url + (contextPath.isEmpty() ? "" : "/" + contextPath);
     }
 
-    /**
-     * URL encodes the value towards the ISO-8859-1 charset
-     *
-     * @param value
-     */
-    public static String urlEncode(String value) {
+    /** URL encodes the value towards the ISO-8859-1 charset */
+    public static String urlEncode(String value, String valueEncoding) {
         try {
             // TODO: URLEncoder also encodes ( and ) which are considered safe chars,
             // see also http://www.w3.org/International/O-URL-code.html
-            return URLEncoder.encode(new String(value.getBytes(), "UTF-8"), "UTF-8");
+            return URLEncoder.encode(new String(value.getBytes(), valueEncoding), "UTF-8");
         } catch (UnsupportedEncodingException e) {
             throw new RuntimeException("This is unexpected", e);
         }
@@ -116,7 +122,7 @@ public class URIs {
         try {
             // TODO: URLEncoder also encodes ( and ) which are considered safe chars,
             // see also http://www.w3.org/International/O-URL-code.html
-            return URLDecoder.decode(new String(value.getBytes(), "UTF-8"), "UTF-8");
+            return URLDecoder.decode(new String(value.getBytes(), StandardCharsets.UTF_8), "UTF-8");
         } catch (UnsupportedEncodingException e) {
             throw new RuntimeException("This is unexpected", e);
         }
@@ -125,11 +131,10 @@ public class URIs {
     /**
      * Appends a query string to a url.
      *
-     * <p>This method checks <code>url</code> to see if the appended query string requires a '?' or
-     * '&' to be prepended.
+     * <p>This method checks <code>url</code> to see if the appended query string requires a '?' or '&amp;' to be
+     * prepended.
      *
-     * <p>This code can be used to make sure the url ends with ? or & by calling
-     * appendQueryString(url, "")
+     * <p>This code can be used to make sure the url ends with ? or &amp; by calling appendQueryString(url, "")
      *
      * @param url The base url.
      * @param queryString The query string to be appended, should not contain the '?' character.
